--- a/app.css
+++ b/app.css
@@ -378,6 +378,39 @@ transform: rotate(45deg);
     /* height: 5rem; */
 }
 
+.link-wrapper {
+    position: relative;
+    /* width: 50%; */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: 0.5s ease;
+    background-color: black;
+}
+
+.link-wrapper:hover .overlay {
+  opacity: 0.8;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
     /* ------------- LINKS-Section ------------- */
 
 #links-section {
