--- a/app.css
+++ b/app.css
@@ -148,9 +148,22 @@ a:hover {
 
     /* ------------- WELCOME - HERO BANNER - TOP SECTION ------------- */
 
+/* #top {
+    height: 100vh;
+}
+
+#welcome {
+    height: 90vh !important;
+} */
+
 .quick-link {
     width: 10em;
     margin-bottom: 1em;
+}
+
+#arrow-down {
+    width: 12.73px;
+    margin: 0 auto;
 }
 
 .arrow {
@@ -158,11 +171,11 @@ a:hover {
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 3px;
-  }
+}
 
 .down {
-transform: rotate(45deg);
--webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 
 #hello {
@@ -266,7 +279,6 @@ transform: rotate(45deg);
 
     #welcome {
         min-height: auto;
-        /* max-height: 250px !important; */
     }
 
     #about {
@@ -331,11 +343,11 @@ transform: rotate(45deg);
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-template-rows: minmax(1fr, auto);
     grid-gap: 1rem;
-    margin-top: 1rem !important;
+    /* margin-top: 10rem !important; */
 }
 
 .gallery-wrapper {
-    margin: 0 10%;
+    margin: 10rem 10% 0 10%;
 }
 
 .gallery-wrapper ul li {
